--- a/Praktikum_1/LinearRegression.ipynb
+++ b/Praktikum_1/LinearRegression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMjn2Qj0m7RfY/Rm/z49Sxb",
+      "authorship_tag": "ABX9TyMcgyFPsSt/rPsWoL0dKWzj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "Lmab02AfbESK"
       },
@@ -81,7 +81,7 @@
         "id": "iMxaCzqfcP0w",
         "outputId": "4ead9a8d-fd38-4879-e5de-a8aac759d1b7"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -419,6 +419,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Pertama, dataset diambil menggunakan fungsi fetch_california_housing(), kemudian data tersebut dimasukkan ke dalam DataFrame pandas dengan masing-masing fitur sebagai kolom. Selain itu, kolom MedHouseValue ditambahkan untuk menyimpan nilai harga median rumah, yang merupakan variabel dependen (target) dalam analisis ini. Selanjutnya, dataset dipisahkan menjadi variabel independen (features) yang berisi semua fitur kecuali harga rumah, dan variabel dependen yang hanya berisi harga rumah. Program ini kemudian menampilkan lima data pertama untuk memberikan gambaran awal tentang struktur dataset. Namun, agar program dapat berjalan dengan baik, perlu ditambahkan impor pandas (import pandas as pd), karena DataFrame digunakan dalam proses manipulasi data."
+      ],
+      "metadata": {
+        "id": "p8Divojl_Vse"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "df.describe()\n",
@@ -432,7 +441,7 @@
         "id": "rW7G0ga5dT0Q",
         "outputId": "6b8b0568-3644-4da0-c9c3-ff36a1227712"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -458,6 +467,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. df.describe() digunakan untuk menampilkan statistik deskriptif dari dataset, seperti mean (rata-rata), standar deviasi, nilai minimum, maksimum, dan kuartil untuk setiap kolom numerik.\n",
+        "2. df.info() memberikan informasi tentang struktur DataFrame, termasuk jumlah baris dan kolom, tipe data di setiap kolom, serta jumlah nilai non-null dalam dataset.\n",
+        "3. df.shape digunakan untuk mengetahui dimensi DataFrame, yaitu jumlah baris dan kolom, yang kemudian dicetak dengan fungsi print()."
+      ],
+      "metadata": {
+        "id": "EYbUEMCD_8ry"
+      }
     },
     {
       "cell_type": "markdown",
@@ -491,7 +511,7 @@
         "id": "Suwina_MeThI",
         "outputId": "04664d34-6d40-4d2c-c03e-360e87a24510"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -502,6 +522,22 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Dataset akan dibagi menjadi data latih (training set) dan data uji (test set) menggunakan fungsi train_test_split() dari pustaka scikit-learn. Variabel inputs berisi fitur-fitur independen, sedangkan targets adalah variabel dependen yang akan diprediksi. Dataset dibagi dengan proporsi 70% untuk pelatihan dan 30% untuk pengujian (test_size=0.3). Parameter random_state=1 digunakan agar pembagian data tetap konsisten setiap kali kode dijalankan. Setelah pembagian, program mencetak dimensi data latih dan data uji untuk memastikan pemisahan berjalan sesuai yang diharapkan."
+      ],
+      "metadata": {
+        "id": "VjMC3qazAa9I"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "eca24J0SAHDJ"
+      }
     },
     {
       "cell_type": "markdown",
@@ -537,7 +573,7 @@
         "id": "oR9iNWLKfBQn",
         "outputId": "74bc1f3a-f7fd-4a01-eb15-e1aa4498136e"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -563,6 +599,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Dataset ini akan dinormalisasikan menggunakan MinMaxScaler() dari pustaka scikit-learn untuk menskalakan fitur ke dalam rentang 0 hingga 1. Pertama, objek scaler dibuat dengan MinMaxScaler(). Kemudian, fit_transform(X_train) digunakan untuk menyesuaikan skala data latih dan menerapkan transformasi secara langsung. Untuk data uji, hanya dilakukan transformasi menggunakan transform(X_test), tanpa fitting ulang, agar skala tetap konsisten dengan data latih. Terakhir, hasil transformasi pada X_test dicetak untuk melihat perubahan nilai setelah normalisasi."
+      ],
+      "metadata": {
+        "id": "IjmMBGu7A2v-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# **Modelling**"
       ],
       "metadata": {
@@ -583,7 +628,7 @@
         "id": "M5rpmKqNgqer",
         "outputId": "232a2362-2442-4aee-ad21-6473efc665c6"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1016,6 +1061,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Selanjutnya dataset akan dibuat dan dilatih dengan model regresi linear menggunakan pustaka scikit-learn. Pertama, objek lr_model dibuat menggunakan kelas LinearRegression(), yang merupakan model regresi linear untuk menganalisis hubungan antara variabel independen (X_train) dan variabel dependen (y_train). Selanjutnya, metode .fit(X_train, y_train) digunakan untuk melatih model dengan data latih, di mana model akan menghitung koefisien regresi dan intersep yang paling sesuai untuk memprediksi nilai target. Setelah proses pelatihan selesai, model ini dapat digunakan untuk melakukan prediksi terhadap data baru menggunakan metode .predict()."
+      ],
+      "metadata": {
+        "id": "oCaOw6VXBZEN"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "print(f'intercept : {lr_model.intercept_}')\n",
@@ -1028,7 +1082,7 @@
         "id": "Knf63xE5gu92",
         "outputId": "bf27a6a4-3c2a-4c06-bb59-74ae104d83cb"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1040,6 +1094,16 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. lr_model.intercept_ mencetak nilai intersep, yaitu konstanta yang menunjukkan titik potong garis regresi dengan sumbu y ketika semua variabel independen bernilai nol.\n",
+        "2. lr_model.coef_ mencetak koefisien regresi yang menunjukkan seberapa besar pengaruh setiap fitur dalam X_train terhadap variabel target y_train. Dengan kata lain, setiap koefisien dalam lr_model.coef_ mewakili perubahan dalam variabel dependen untuk setiap peningkatan satu unit dalam variabel independen, dengan asumsi variabel lain tetap konstan."
+      ],
+      "metadata": {
+        "id": "MXYHk7d0B-Oq"
+      }
     },
     {
       "cell_type": "markdown",
@@ -1066,7 +1130,7 @@
         "id": "rkdnxNZOhPv0",
         "outputId": "66c44893-f3dc-4ed8-80d3-799e7d523af9"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1077,6 +1141,20 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Selanjutnya lakukanevaluasi kinerja model regresi linear dengan dua metrik utama: Mean Squared Error (MSE) dan koefisien determinasi (R²).\n",
+        "\n",
+        "1. lr_model.predict(X_test) menghasilkan prediksi nilai y_pred berdasarkan data uji (X_test).\n",
+        "2. mean_squared_error(y_test, y_pred) menghitung MSE, yaitu rata-rata kuadrat selisih antara nilai sebenarnya (y_test) dan nilai prediksi (y_pred). Semakin kecil MSE, semakin baik model dalam memprediksi data.\n",
+        "3. lr_model.score(X_test, y_test) menghitung R², yang menunjukkan seberapa baik model menjelaskan variabilitas dalam data target (y_test). Nilai R² berkisar antara 0 hingga 1, di mana semakin mendekati 1, semakin baik model dalam menjelaskan data.\n",
+        "4. Nilai MSE dan R² dicetak untuk menilai performa model regresi linear."
+      ],
+      "metadata": {
+        "id": "5SD2fbnoCjYZ"
+      }
     },
     {
       "cell_type": "code",
@@ -1095,7 +1173,7 @@
         "id": "e_sK3YrhiFS-",
         "outputId": "4cae8088-0073-4a73-db2d-fc17dff32474"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1110,6 +1188,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Selanjutnya visualisasikan hubungan antara nilai aktual dan nilai prediksi dalam model regresi linear menggunakan scatter plot.\n",
+        "\n",
+        "1. plt.scatter(y_test, y_pred) membuat diagram sebar (scatter plot) dengan nilai aktual (y_test) sebagai sumbu x dan nilai prediksi (y_pred) sebagai sumbu y.\n",
+        "2. plt.xlabel('Actual Values') dan plt.ylabel('Predicted Values') memberi label pada sumbu x dan y agar lebih mudah dipahami.\n",
+        "3.  plt.title('Actual vs. Predicted Values') memberikan judul pada grafik untuk menunjukkan bahwa plot ini membandingkan nilai aktual vs. prediksi. Terakhir, plt.show() digunakan untuk menampilkan plot."
+      ],
+      "metadata": {
+        "id": "BPIVCzhQDS59"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#save the model to disk\n",
@@ -1122,17 +1213,23 @@
       "metadata": {
         "id": "alZZ9O26i48F"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "Dan terakhir, simpan model regresi linear ke dalam file menggunakan pustaka pickle, sehingga model dapat digunakan kembali tanpa perlu dilatih ulang.\n",
+        "\n",
+        "1. pustaka pickle diimpor untuk menangani proses serialisasi objek.\n",
+        "2. variabel filename didefinisikan sebagai 'finalized_model.sav', yang akan menjadi nama file tempat model disimpan.\n",
+        "3. fungsi pickle.dump(lr_model, open(filename, 'wb')) digunakan untuk menyimpan objek lr_model (model regresi linear yang telah dilatih) ke dalam file dalam mode write binary (wb).\n",
+        "\n",
+        "Setelah disimpan, model ini dapat dimuat kembali kapan saja menggunakan pickle.load(open(filename, 'rb')), sehingga tidak perlu melakukan pelatihan ulang, yang dapat menghemat waktu dan sumber daya komputasi."
+      ],
       "metadata": {
-        "id": "2uUeZQ7-j9gj"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "FNS_dJAxDojT"
+      }
     }
   ]
 }
