--- a/Praktikum_1/SimpleLinearRegression.ipynb
+++ b/Praktikum_1/SimpleLinearRegression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMlck4OBziDlFgCGGqjzFA4",
+      "authorship_tag": "ABX9TyM2hK6MMq+RVqf9lb4yzBDX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -439,7 +439,7 @@
         "id": "aZEJ09tKOf8c",
         "outputId": "f8e8d7af-932d-4fed-fb1e-53903be7c8e8"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -452,6 +452,23 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Kode ini digunakan untuk **membuat scatter plot** yang memvisualisasikan hubungan antara **luas tanah** dan **harga tanah** menggunakan pustaka `matplotlib.pyplot`.  \n",
+        "\n",
+        "1. `df.plot(kind='scatter', x='luas', y='harga')` membuat scatter plot dengan **luas tanah** sebagai sumbu x dan **harga tanah** sebagai sumbu y.\n",
+        "2. `plt.title('Perbandingan Luas Tanah dengan Harga Tanah')` memberikan judul pada grafik agar lebih informatif.\n",
+        "3. `plt.xlabel('Luas Tanah (m persegi)')` dan `plt.ylabel('Harga Tanah (Dollar)')` memberi label pada sumbu x dan y untuk menunjukkan makna dari masing-masing sumbu.  \n",
+        "4. `plt.xlim(0, 25)` dan `plt.ylim(0, 25)` menetapkan batas sumbu x dan y dari 0 hingga 25 agar tampilan lebih jelas dan terfokus. Fungsi `plt.grid(True)` menambahkan garis grid untuk membantu membaca nilai pada grafik dengan lebih mudah.\n",
+        "5. `plt.show()` menampilkan plot yang telah dibuat.  \n",
+        "\n",
+        "Scatter plot ini berguna untuk memahami pola hubungan antara luas tanah dan harga tanah, misalnya apakah ada hubungan linear atau pola tertentu yang dapat dijadikan dasar untuk analisis lebih lanjut."
+      ],
+      "metadata": {
+        "id": "bMdNzqz0FCn4"
+      }
     },
     {
       "cell_type": "code",
@@ -471,7 +488,7 @@
         "id": "bympoJC3RRCi",
         "outputId": "62f00176-e448-46cb-b0f7-00020f2aa70a"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -482,6 +499,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Pisahkan dataset menjadi dua array menggunakan pustaka numpy, yaitu X (fitur/independen) dan y (target/dependen). Kolom 'luas' dari dataframe df dikonversi menjadi array numpy sebagai variabel independen (X), sedangkan kolom 'harga' dikonversi menjadi variabel dependen (y). Dengan mencetak X dan y, kita dapat memastikan bahwa data telah dipisahkan dengan benar sebelum digunakan dalam proses training model machine learning atau analisis lebih lanjut."
+      ],
+      "metadata": {
+        "id": "naNYUtqjFu71"
+      }
     },
     {
       "cell_type": "code",
@@ -498,7 +524,7 @@
         "id": "kIjfGV2HR386",
         "outputId": "8f102334-286d-45e0-cd3e-4e65c20c2a42"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -515,18 +541,18 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "Ubah bentuk (reshape) array X agar memiliki satu kolom dan sejumlah baris sesuai dengan jumlah data. Dengan X.reshape(-1, 1), array X yang sebelumnya berbentuk satu dimensi diubah menjadi dua dimensi dengan satu kolom, yang diperlukan oleh banyak algoritma machine learning, seperti regresi linear di scikit-learn. Setelah itu, print(f'X shape: {X.shape}') mencetak ukuran baru dari array, sedangkan print(f'X: {X}') menampilkan isi array yang telah diubah bentuknya."
+      ],
       "metadata": {
-        "id": "BQGH6bQRSMdw"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "tMBzkbvuF71E"
+      }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Modeling"
+        "# Modeling"
       ],
       "metadata": {
         "id": "G9xvk6hnSmbR"
@@ -548,7 +574,7 @@
         "id": "J4Y84xtoSops",
         "outputId": "b9a4ef24-1acf-4673-af33-d260c99dce0e"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -981,6 +1007,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Latih model regresi linear menggunakan pustaka scikit-learn. Pertama, from sklearn.linear_model import LinearRegression mengimpor kelas LinearRegression. Kemudian, model = LinearRegression() membuat instance dari model regresi linear. Selanjutnya, model.fit(X, y) melatih model dengan X sebagai variabel independen (fitur) dan y sebagai variabel dependen (target), sehingga model dapat menemukan hubungan linear antara keduanya. Setelah pelatihan, model ini dapat digunakan untuk melakukan prediksi pada data baru."
+      ],
+      "metadata": {
+        "id": "JBqIE6LNGzxY"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "X_vis = np.array([0, 25]).reshape(-1, 1)\n",
@@ -989,8 +1024,17 @@
       "metadata": {
         "id": "vWCccXmKSvEi"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Lakukan prediksi menggunakan model regresi linear yang telah dilatih. Pertama, X_vis = np.array([0, 25]).reshape(-1, 1) membuat array numpy dengan dua nilai, yaitu 0 dan 25, lalu mengubahnya menjadi bentuk 2D agar kompatibel dengan model. Selanjutnya, y_vis = model.predict(X_vis) menghitung prediksi nilai y berdasarkan X_vis menggunakan model regresi linear. Hasil prediksi ini dapat digunakan untuk visualisasi garis regresi atau analisis hubungan antara variabel."
+      ],
+      "metadata": {
+        "id": "HUoiIMqXG7Kv"
+      }
     },
     {
       "cell_type": "code",
@@ -1014,7 +1058,7 @@
         "id": "60EnCjSoS8eb",
         "outputId": "db6d8637-c8d2-4b6a-d52e-6b4dd566766a"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1030,7 +1074,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Visualisasikan data dan garis regresi linear menggunakan pustaka matplotlib. plt.scatter(X, y) membuat scatter plot dari data asli, menunjukkan hubungan antara luas tanah (X) dan harga tanah (y). plt.plot(X_vis, y_vis, color='red') menggambar garis regresi linear menggunakan hasil prediksi model, yang membantu memahami tren data. Selanjutnya, kode menambahkan judul dan label sumbu untuk memperjelas visualisasi, serta plt.grid(True) untuk menampilkan grid agar pembacaan grafik lebih mudah. Akhirnya, plt.show() menampilkan plot yang telah dibuat."
+      ],
       "metadata": {
         "id": "wsC0hheNUYrQ"
       }
@@ -1048,7 +1094,7 @@
         "id": "mYN7AiDHTSwo",
         "outputId": "8425c980-5dbf-4f31-e73a-d3c60c9e374b"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1059,6 +1105,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Tampilkan nilai intercept dan slope (koefisien regresi) dari model regresi linear yang telah dilatih. model.intercept_ merepresentasikan titik potong sumbu Y ketika nilai X = 0, sedangkan model.coef_ menunjukkan kemiringan garis regresi, yang menggambarkan seberapa besar perubahan nilai y untuk setiap kenaikan satu unit pada X. Nilai ini penting dalam analisis regresi karena membantu memahami hubungan antara variabel independen dan dependen."
+      ],
+      "metadata": {
+        "id": "TPCJ92gpHpq2"
+      }
     },
     {
       "cell_type": "markdown",
@@ -1083,7 +1138,7 @@
         "id": "Z44K4E6oVE7p",
         "outputId": "cdb3fc7d-f612-4bab-c0a2-449df8e744f3"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1107,6 +1162,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Buat array luas_tanah yang berisi tiga nilai, yaitu 12, 15, dan 20, lalu mengubahnya menjadi bentuk 2D dengan reshape(-1, 1). Hal ini dilakukan agar array kompatibel dengan model regresi linear di scikit-learn, yang mengharuskan input berbentuk dua dimensi. print(luas_tanah.shape) digunakan untuk menampilkan dimensi array, sedangkan luas_tanah akan mencetak isi array tersebut. Data ini nantinya bisa digunakan sebagai input untuk prediksi harga tanah berdasarkan luasnya."
+      ],
+      "metadata": {
+        "id": "Q9qZt9t_H7pc"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "harga_prediksi = model.predict(luas_tanah)\n",
@@ -1119,7 +1183,7 @@
         "id": "opQo93YbVg3J",
         "outputId": "af5c6e3e-b205-4b62-8535-0b0fbf6eaeca"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1134,6 +1198,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Lakukan prediksi harga tanah berdasarkan luasnya menggunakan model regresi linear yang telah dilatih. model.predict(luas_tanah) mengambil array luas_tanah sebagai input dan menghasilkan harga prediksi sesuai dengan hubungan linear yang telah dipelajari oleh model. Nilai hasil prediksi ini kemudian disimpan dalam variabel harga_prediksi, dan dengan memanggilnya, hasil prediksi akan ditampilkan."
+      ],
+      "metadata": {
+        "id": "KWx462vwIJPD"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "for luas, hrg in zip(luas_tanah, harga_prediksi):\n",
@@ -1146,7 +1219,7 @@
         "id": "T1S_lvMNVnjn",
         "outputId": "2f497e6e-3d66-423d-8d5f-3e72327ca679"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1158,6 +1231,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Tampilkan luas tanah beserta harga prediksi dalam format yang lebih mudah dibaca. zip(luas_tanah, harga_prediksi) menggabungkan setiap pasangan nilai dari luas_tanah dan harga_prediksi. Kemudian, loop for digunakan untuk mengambil setiap pasangan nilai tersebut, dengan luas merepresentasikan luas tanah dan hrg sebagai harga prediksi. print(f'Luas Tanah: {luas}: Harga Prediksi: ${hrg}') mencetak hasilnya dalam format string yang lebih jelas, sehingga setiap luas tanah disertai dengan harga prediksi dalam satu baris output."
+      ],
+      "metadata": {
+        "id": "lVwASO1uIUeF"
+      }
     },
     {
       "cell_type": "markdown",
@@ -1189,8 +1271,17 @@
       "metadata": {
         "id": "etbR_3qHXF0h"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Persiapkan dataset pelatihan (X_train, y_train) dan dataset pengujian (X_test, y_test) dalam analisis regresi linear. X_train dan X_test adalah array satu dimensi yang berisi nilai numerik (mungkin merepresentasikan fitur seperti luas tanah), yang kemudian diubah menjadi bentuk dua dimensi menggunakan .reshape(-1, 1) agar kompatibel dengan model scikit-learn. y_train dan y_test berisi nilai target yang sesuai (mungkin harga properti). Dataset ini akan digunakan untuk melatih dan menguji model regresi linear dalam memprediksi hubungan antara input (X) dan output (y)."
+      ],
+      "metadata": {
+        "id": "wa2LYYJcIiQS"
+      }
     },
     {
       "cell_type": "markdown",
@@ -1215,7 +1306,7 @@
         "id": "ysLCfQTVX8Zg",
         "outputId": "f701776d-c64b-4246-d701-95ed5acdeb05"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1650,6 +1741,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Selanjutnya melatih model regresi linear menggunakan dataset pelatihan. model = LinearRegression() membuat sebuah instance dari model regresi linear dari pustaka scikit-learn. Kemudian, model.fit(X_train, y_train) digunakan untuk melatih model dengan memasukkan data fitur X_train dan target y_train. Setelah proses ini, model akan mempelajari hubungan antara variabel input dan output sehingga dapat digunakan untuk membuat prediksi berdasarkan data baru."
+      ],
+      "metadata": {
+        "id": "59FsJWg_IxJY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Evaluasi Linear Regression Model dengan Coefficient of Determination R Square"
       ],
       "metadata": {
@@ -1672,7 +1772,7 @@
         "id": "NgXSA9gQYKB-",
         "outputId": "d1d89cde-c05d-4608-d312-99d076ee72c3"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1682,6 +1782,25 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Hitung nilai R-squared (R²), yang merupakan metrik evaluasi dalam regresi linear untuk mengukur seberapa baik model menjelaskan variabilitas data target (y_test).\n",
+        "\n",
+        "1. y_pred = model.predict(X_test)\n",
+        "\n",
+        "  Model regresi linear yang telah dilatih digunakan untuk memprediksi nilai target (y_pred) berdasarkan fitur uji (X_test).\n",
+        "2. r_squared = r2_score(y_test, y_pred)\n",
+        "\n",
+        "  r2_score() dari sklearn.metrics digunakan untuk menghitung nilai R², yang menunjukkan seberapa baik model memprediksi data uji (y_test).\n",
+        "3. print(f'R-squared: {r_squared}')\n",
+        "\n",
+        "  Hasil perhitungan R² ditampilkan, di mana nilai mendekati 1 menunjukkan prediksi yang baik, sedangkan nilai mendekati 0 menunjukkan model kurang baik dalam menjelaskan variabilitas data."
+      ],
+      "metadata": {
+        "id": "Iw0Fn14KJDb_"
+      }
     },
     {
       "cell_type": "code",
@@ -1695,7 +1814,7 @@
         "id": "S_NIKSLqYkZw",
         "outputId": "bd38279a-ea1f-4eab-b445-92fccd866b39"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1710,13 +1829,13 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "Prediksi hasil dari model regresi linear setelah diberikan data uji (X_test)."
+      ],
       "metadata": {
-        "id": "7ZMkRkcIYnnx"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "7_9_Y488JVjn"
+      }
     }
   ]
 }
