--- a/Praktikum_2/LogisticRegression.ipynb
+++ b/Praktikum_2/LogisticRegression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO9BkEL4x3T0wO991PW8/Ox",
+      "authorship_tag": "ABX9TyPumk1RBUBMg68si3D+gT5S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -398,6 +398,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Program ini menggunakan pustaka Pandas untuk memuat dataset diabetes dari URL yang disediakan. URL tersebut merujuk pada file CSV yang berisi data diabetes, yang diambil langsung dari repositori GitHub. Setelah data diunduh, fungsi **pd.read_csv()** digunakan untuk membaca file CSV dan menyimpannya dalam sebuah DataFrame bernama **df**. Selanjutnya, metode **df.head()** digunakan untuk menampilkan lima baris pertama dari dataset tersebut, sehingga pengguna dapat melihat gambaran awal struktur dan isi data."
+      ],
+      "metadata": {
+        "id": "RZgw1-tfBHEl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Selecting feature\n",
         "\n",
         "We need to divide the given column into two types of variables dependent (or target variable) and independent variable(or feature variables)"
@@ -417,7 +426,7 @@
       "metadata": {
         "id": "iXuN1vsNRTn1"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -433,7 +442,7 @@
         "id": "1_z5baZGSCQR",
         "outputId": "5273ab17-84b9-406c-a0a6-a335aff82392"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -444,6 +453,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Bagi dataset menjadi dua bagian: fitur dan variabel target. Daftar feature_cols berisi nama kolom yang digunakan sebagai fitur, yaitu Pregnancies, Glucose, BloodPressure, SkinThickness, Insulin, BMI, DiabetesPedigreeFunction, dan Age. Kemudian, DataFrame df difilter menggunakan daftar tersebut untuk membuat variabel X, yang berisi data fitur. Sementara itu, variabel y diisi dengan kolom Outcome dari DataFrame, yang berperan sebagai target atau label yang akan diprediksi. Lalu tampilkan variabel X dan y tersebut."
+      ],
+      "metadata": {
+        "id": "t97227UUB0xz"
+      }
     },
     {
       "cell_type": "markdown",
@@ -469,8 +487,17 @@
       "metadata": {
         "id": "XflLGDAZSr5p"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Dataset dibagi menjadi data latih dan data uji menggunakan fungsi train_test_split dari pustaka sklearn.model_selection. Variabel X berisi fitur, sedangkan y berisi target. Parameter test_size=0.3 menunjukkan bahwa 30% dari data akan digunakan sebagai data uji, sementara 70% sisanya digunakan untuk melatih model. Parameter random_state=1 memastikan bahwa pembagian data dilakukan secara konsisten setiap kali kode dijalankan, sehingga hasilnya bisa direproduksi. Hasil pembagian ini disimpan dalam empat variabel: X_train dan y_train untuk data latih, serta X_test dan y_test untuk data uji."
+      ],
+      "metadata": {
+        "id": "5msCUithCQAT"
+      }
     },
     {
       "cell_type": "markdown",
@@ -507,7 +534,7 @@
         "id": "uikairzNToxB",
         "outputId": "1f402ff4-0fcc-4d09-b4d5-f44a63e095ac"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -528,6 +555,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Selanjutnya bangun model klasifikasi menggunakan regresi logistik dari pustaka **sklearn.linear_model**. Pertama, kelas **LogisticRegression** diimpor. Kemudian, model dibuat dengan inisialisasi objek **logreg** menggunakan parameter **random_state=16** untuk memastikan hasil yang konsisten setiap kali kode dijalankan. Selanjutnya, model dilatih dengan data latih **X_train** dan **y_train** menggunakan metode **fit()**. Setelah pelatihan selesai, model digunakan untuk memprediksi nilai target dari data uji **X_test** dengan metode **predict()**, dan hasil prediksi disimpan dalam variabel **y_pred**."
+      ],
+      "metadata": {
+        "id": "NqwKYYHjC69p"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Model Evaluation using Confusion Matrix\n",
         "\n",
         "Confusion Matrix adalah sebuah tabel yang digunakan untuk mengevaluasi kinerja model klasifikasi dengan membandingkan prediksi model dengan nilai sebenarnya dari data uji. Confusion matrix terdiri dari 4 komponen utama:\n",
@@ -536,7 +572,8 @@
         "  * Model memprediksi positif dan hasil aslinya memang positif\n",
         "  * Contoh: Model mendeteksi email sebagai spam, dan memang email itu adalah spam.\n",
         "2. False Positive (FP)\n",
-        "  * Model memprediksi, tetapi hasil aslinya\n",
+        "  * Model memprediksi positif, tetapi hasil aslinya sebenarnya negatif.\n",
+        "  * Contoh: Model mengira email adalah spam, tetapi sebenarnya bukan spam.\n",
         "3. False Negative (FN)\n",
         "  * Model memprediksi negatif, tetapi hasil aslinya sebenarnya positif.\n",
         "  * Contoh: Model mengira email bukan spam, tetap sebenarnya spam.\n",
@@ -564,7 +601,7 @@
         "id": "CvUFsDx0Vpxt",
         "outputId": "9d3b4c64-9824-4b00-ef26-a7b080188f92"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -578,6 +615,15 @@
           "execution_count": 14
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Hitung dan tampilkan confusion matrix menggunakan pustaka sklearn. Pertama, modul metrics diimpor dari sklearn. Lalu, fungsi confusion_matrix() digunakan untuk membandingkan nilai sebenarnya dari data uji yang disimpan dalam y_test dengan hasil prediksi yang disimpan dalam y_pred. Hasilnya disimpan dalam variabel cnf_matrix dan ditampilkan sebagai output. Confusion matrix ini digunakan untuk mengevaluasi kinerja model klasifikasi dengan memberikan gambaran tentang jumlah prediksi yang benar dan salah untuk setiap kelas."
+      ],
+      "metadata": {
+        "id": "MvcttrbXEizo"
+      }
     },
     {
       "cell_type": "code",
@@ -608,7 +654,7 @@
         "id": "pulG8Vo9W2PF",
         "outputId": "8fec2842-9a2b-471a-93f7-df40ecc118f4"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -635,6 +681,19 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Program ini memvisualisasikan confusion matrix menggunakan pustaka **matplotlib** dan **seaborn**. Pertama, pustaka yang diperlukan seperti **numpy**, **matplotlib.pyplot**, dan **seaborn** diimpor. Variabel **class_names** didefinisikan untuk merepresentasikan label kelas, yaitu 0 dan 1. Kemudian, sebuah figure dan axis dibuat menggunakan **plt.subplots()**.\n",
+        "\n",
+        "Sumbu x dan y diberi label dengan **plt.xticks()** dan **plt.yticks()** sesuai dengan jumlah kelas. Untuk visualisasi, digunakan fungsi **sns.heatmap()** yang membuat heatmap dari **cnf_matrix**, dengan pewarnaan menggunakan palet \"YlGnBu\", angka dalam matriks ditampilkan dengan parameter **annot=True**, dan format angka disetel ke **'g'** agar ditampilkan sebagai bilangan bulat.\n",
+        "\n",
+        "Label pada sumbu x diposisikan di bagian atas menggunakan **ax.xaxis.set_label_position(\"top\")**. Layout plot diperbaiki dengan **plt.tight_layout()** agar elemen tidak saling tumpang tindih. Akhirnya, judul dan label untuk sumbu x dan y ditambahkan untuk memberikan konteks pada visualisasi confusion matrix ini."
+      ],
+      "metadata": {
+        "id": "ZG0kUkKMFNYV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Confusion matrix evaluation metrics\n",
         "\n",
         "Dari confusion matrix, kita bisa menghitung berbagai metrik evaluasi"
@@ -657,7 +716,7 @@
         "id": "9eCk7FvgYtkN",
         "outputId": "76629d7d-cf29-420b-ed40-a794e3b78d8b"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -703,7 +762,7 @@
         "id": "vzs4texhaeLJ",
         "outputId": "52c0a8e1-219f-47da-df05-c45b08ddae06"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -722,7 +781,10 @@
       "source": [
         "## Area Under Curve (AUC)\n",
         "\n",
-        "* Untuk mempermudah"
+        "* Untuk mempermudah interpretasi ROC curve, kita bisa menghitung Area Under the Curve (AUC), yaitu luas di bawah ROC curve.\n",
+        "* AUC mengukur seberapa balik model membedakan kelas positif dan negatif (semakin tinggi, semakin baik).\n",
+        "* AUC score for the case is 0,88.\n",
+        "* AUC score 1 represents a perfect classifier, and 0.5 represents a worthless classifier."
       ],
       "metadata": {
         "id": "UgiKibaiciz9"
